<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//Atrium
	strEnOceanSwitch_Gang_3_109_PladeA				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;


	//Gange
	strEnOceanSwitch_Gang_4_330					: Tc2_EnOcean.STR_EnOceanSwitch;

	//Rum
	strEnOceanSwitch_Rum_4_324					: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_325					: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_329_Indgang			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_329_Ekstra			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_339_Indgang1       	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_339_Indgang2       	: Tc2_EnOcean.STR_EnOceanSwitch;
    strEnOceanSwitch_Rum_5_341       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_343       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_344       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_345       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_346       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_348       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_350       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_352       			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_353       			: Tc2_EnOcean.STR_EnOceanSwitch;
    strEnOceanSwitch_Rum_5_354       			: Tc2_EnOcean.STR_EnOceanSwitch;
  	strEnOceanSwitch_Rum_5_355A_Indgang1      	: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_355A_Indgang2      	: Tc2_EnOcean.STR_EnOceanSwitch;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>